Simple control panel filler

--- a/src/styles/components/transcription-viewer-v4.styl
+++ b/src/styles/components/transcription-viewer-v4.styl
@@ -73,6 +73,12 @@
       flex-direction: column
       .svg-viewer-v4
         height: 45%  //Fixes FF bug where data-subpanel is way too huge in vertical.
+
+  .editor-panel
+    background: #c9c
+    margin: 0.2em
+    flex: 1 1 50%
+    display: flex
   
   .aggregations-panel
     flex: 0 0 auto
