--- a/src/styles/components/transcription-viewer-v4.styl
+++ b/src/styles/components/transcription-viewer-v4.styl
@@ -64,6 +64,7 @@
   .data-panel
     flex: 1 1 auto
     display: flex
+    justify-content: center
     background: $neutral
     margin: 0 3px
     flex-direction: row
@@ -75,9 +76,35 @@
         height: 45%  //Fixes FF bug where data-subpanel is way too huge in vertical.
 
   .editor-panel
-    background: #c9c
+    display: flex
+    flex-direction: column
+    background: $neutral-light
     margin: 0.2em
-    flex: 1 1 50%
+    flex: 0 0 50%
+    border-radius: 0.5em
+    padding: 0.5em
+    overflow: auto
+    
+    > div
+      background: $neutral-dark
+      font-size: 0.8em
+      
+      .button-container
+        display: inline-block
+        padding: 0.2em 0.5em
+        background: $neutral-light
+        margin: 0.2em
+        
+        label
+          display: inline-block
+          vertical-align: middle
+        
+        .button
+          vertical-align: middle
+    
+    textarea
+      flex: 1 1 auto
+      display: block
   
   .aggregations-panel
     flex: 0 0 auto
