--- a/src/styles/components/app.styl
+++ b/src/styles/components/app.styl
@@ -69,6 +69,11 @@
     border: 0.2em solid $highlight
     transform: translate(0, -0.1em)
     box-shadow: 0 0.3em 0.2em #333
+  
+  &.disabled
+    border: 0.2em solid $neutral-dark
+    background: $neutral
+    color: $neutral-dark
 
 .message
   margin: 0.25em
