--- a/src/styles/components/app.styl
+++ b/src/styles/components/app.styl
@@ -75,6 +75,19 @@
     background: $neutral
     color: $neutral-dark
 
+.button-container
+  display: inline-block
+  padding: 0.2em 0.5em
+  background: $neutral-light
+  margin: 0.2em
+
+  label
+    display: inline-block
+    vertical-align: middle
+
+  .button
+    vertical-align: middle
+
 .message
   margin: 0.25em
   padding: 0.5em
