--- a/src/styles/global/root.styl
+++ b/src/styles/global/root.styl
@@ -10,14 +10,15 @@ $neutral-dark = #666
 $anti = #c33
 
 :root
-  font-family Arial, Helvetica, sans-serif
-  color $tertiary
-  background-color $secondary
+  color: $tertiary
+  background-color: $secondary
+  font-size: 12px
+  font-family: "Roboto", Arial, sans-serif
 
 html
 body
-  margin 0
-  padding 0
+  margin: 0
+  padding: 0
 
 a
   text-decoration: none
@@ -25,3 +26,6 @@ a
   
   &:hover
     color: $primary-light
+
+input, textarea
+  font-size: inherit
