--- a/src/styles/components/transcription-viewer-v5.styl
+++ b/src/styles/components/transcription-viewer-v5.styl
@@ -10,7 +10,6 @@
   .control-panel
     flex: 0 0 auto
     width: 16em
-    font-size: 0.8em
     margin: 1px
     overflow: auto  //Allow users to scroll to see more metadata content if window is too small
     
@@ -25,19 +24,43 @@
         display: flex
         margin-bottom: 0.1em
         
-        label
+        > label
           flex: 1 1 30%
           overflow: hidden
           padding: 0.2em
           
-        .data
+        > .data
           flex: 1 1 70%
           overflow: auto
           padding: 0.2em
           
-          input
+          > input
             display: inline-block
             width: 100%
+          
+          > div
+            display: flex
+            align-items: center
+            width: 100%
+          
+            input
+              display: inline-block
+              flex: 1 1 auto
+              width: 10%
+            
+            b
+              flex: 0 0 auto
+              font-weight: normal
+              padding: 0 0.5em
+            
+            .button
+              flex: 0 0 2em
+              padding: 0.25em
+              margin: 0
+            
+            label
+              margin-left: 0.5em
+              flex: 1 1 auto
     
     .subjectID-subpanel
       text-align: center
@@ -71,7 +94,7 @@
     overflow: hidden
     
     &.vertical
-      flex-direction: column
+      flex-direction: column-reverse
       .svg-viewer-v5
         height: 45%  //Fixes FF bug where data-subpanel is way too huge in vertical.
 
@@ -87,7 +110,6 @@
     
     > div
       background: $neutral-dark
-      font-size: 0.8em
     
     textarea
       flex: 1 1 auto
@@ -95,7 +117,6 @@
   
   .aggregations-panel
     flex: 0 0 auto
-    font-size: 0.8em
     margin: 1px
     
     &.expanded
@@ -118,7 +139,6 @@
         
         button.vertical-tab
           margin: 0 0.2em
-          font-size: 1em
           display: inline-block
           border: 0.2em solid $primary
           border-top-left-radius: 1em
@@ -186,7 +206,6 @@
 
         .raw
           display: none
-          font-size: 0.8em
 
           a
             display: block
