--- a/src/styles/components/transcription-viewer-v5.styl
+++ b/src/styles/components/transcription-viewer-v5.styl
@@ -133,7 +133,7 @@ $approved-color = #396
           font-size: 1.2em
           margin: 0 0.5em
         
-        .button
+        .small.button
           margin: 0 0.5em
           padding: 0.25em
           border: none
