basic login prompts

--- a/src/styles/components/info-page.styl
+++ b/src/styles/components/info-page.styl
@@ -1,4 +1,4 @@
-.home-page
+.info-page
   padding: 0.5em 1em
 
   h1
@@ -23,3 +23,12 @@
       
       &:hover .zooniverse-logo
         fill: $secondary
+  
+  .message-panel
+    margin: 1em
+    padding: 1em 2em
+    border: 1px solid $neutral
+    border-radius: 1em
+    
+    &.warning
+      color: $anti
