Fixed Aggregation panel looks

--- a/src/styles/components/app.styl
+++ b/src/styles/components/app.styl
@@ -77,9 +77,9 @@
 
 .button-container
   display: inline-block
-  padding: 0.2em 0.5em
+  padding: 0.2em
   background: $neutral-light
-  margin: 0.2em
+  margin: 0 0.2em
 
   label
     display: inline-block
