--- a/src/styles/components/transcription-viewer-v5.styl
+++ b/src/styles/components/transcription-viewer-v5.styl
@@ -228,11 +228,24 @@ $approved-color = #396
           label
             display: inline-block
             vertical-align: middle
+            cursor: pointer
           
           i
             display: inline-block
             vertical-align: middle
             margin-right: 0.5em
+    
+    .helper-controls
+      flex: 0 0 auto 
+      overflow: hidden
+      
+      .button
+        padding: 0.5em
+        
+        i
+          display: inline-block
+          vertical-align: middle
+          margin-right: 0.5em
     
     .list
       flex: 1 1 auto
